[gd_scene load_steps=5 format=3 uid="uid://bgxi8o4vjl76l"]

[ext_resource type="Script" path="res://wheat/wheat.gd" id="1_amov2"]
[ext_resource type="Texture2D" uid="uid://cqh6tqrldix1x" path="res://raw_assets/wheat1.png" id="1_xg6u8"]
[ext_resource type="Texture2D" uid="uid://b2yqrpd2nshhd" path="res://raw_assets/wheat2.png" id="3_xdldn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1at1n"]
radius = 8.0

[node name="Wheat" type="StaticBody2D"]
script = ExtResource("1_amov2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("CircleShape2D_1at1n")
disabled = true

[node name="Wheat1" type="Sprite2D" parent="."]
position = Vector2(8, 8)
texture = ExtResource("1_xg6u8")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8, 8)
shape = SubResource("CircleShape2D_1at1n")

[node name="Wheat2" type="Sprite2D" parent="."]
visible = false
position = Vector2(8, 8)
texture = ExtResource("3_xdldn")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
